[package]
name = "stellium"
version = "0.1.0"
edition = "2021"
description = "MCP server for astrological calculations using Swiss Ephemeris"
license = "MIT"

[dependencies]
# MCP Server
rmcp = { version = "0.11", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema generation
schemars = "1.0"

# Swiss Ephemeris
libswisseph-sys = "0.1"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
directories = "5"

[[bin]]
name = "stellium"
path = "src/main.rs"
